@@ -97,7 +97,6 @@ IF(XULRUNNER_WIDGET_GTK2)
   PKGCONFIG(gtk+-2.0 GTK_INCDIR GTK_LIBDIR GTK_LFLAGS GTK_CFLAGS)
   include_directories(${GTK_INCDIR})
   add_definitions(${GTK_CFLAGS})
-  add_definitions("-DOSGK_INIT_GTK")
   link_directories(${GTK_LIBDIR})
   link_libraries(${GTK_LFLAGS})
 ENDIF(XULRUNNER_WIDGET_GTK2)
